# timetable/src/OpenApi/Controller/UserProfileController.php
@@ -1,0 +1,221 @@
+<?php
+
+/**
+ * UserProfileController
+ * PHP version 8.1.1
+ *
+ * @category Class
+ * @package  App\OpenApi\Controller
+ * @author   OpenAPI Generator team
+ * @link     https://github.com/openapitools/openapi-generator
+ */
+
+/**
+ * Bib-App Calendar API
+ *
+ * Symfony-konforme REST API für Stundenplan und Terminverwaltung
+ *
+ * The version of the OpenAPI document: 2.0.0
+ * 
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ *
+ */
+
+/**
+ * NOTE: This class is auto generated by the openapi generator program.
+ * https://github.com/openapitools/openapi-generator
+ * Do not edit the class manually.
+ */
+
+namespace App\OpenApi\Controller;
+
+use \Exception;
+use JMS\Serializer\Exception\RuntimeException as SerializerRuntimeException;
+use Symfony\Component\HttpFoundation\Request;
+use Symfony\Component\HttpFoundation\Response;
+use Symfony\Component\HttpKernel\Exception\HttpException;
+use Symfony\Component\Validator\Constraints as Assert;
+use App\OpenApi\Api\UserProfileApiInterface;
+use App\OpenApi\Model\Problem;
+use App\OpenApi\Model\UpdateKlasse200Response;
+use App\OpenApi\Model\UpdateKlasseRequest;
+use App\OpenApi\Model\UserProfile;
+
+/**
+ * UserProfileController Class Doc Comment
+ *
+ * @category Class
+ * @package  App\OpenApi\Controller
+ * @author   OpenAPI Generator team
+ * @link     https://github.com/openapitools/openapi-generator
+ */
+class UserProfileController extends Controller
+{
+
+    /**
+     * Operation getUserProfile
+     *
+     * Aktuelles Benutzerprofil abrufen
+     *
+     * @param Request $request The Symfony request to handle.
+     * @return Response The Symfony response.
+     */
+    public function getUserProfileAction(Request $request)
+    {
+        // Figure out what data format to return to the client
+        $produces = ['application/json', 'application/problem+json'];
+        // Figure out what the client accepts
+        $clientAccepts = $request->headers->has('Accept')?$request->headers->get('Accept'):'*/*';
+        $responseFormat = $this->getOutputFormat($clientAccepts, $produces);
+        if ($responseFormat === null) {
+            return new Response('', 406);
+        }
+
+        // Handle authentication
+        // Authentication 'BearerAuth' required
+        // HTTP bearer authentication required
+        $securityBearerAuth = $request->headers->get('authorization');
+
+        // Read out all input parameter values into variables
+
+        // Use the default value if no value was provided
+
+        // Validate the input values
+
+
+        try {
+            $handler = $this->getApiHandler();
+
+            // Set authentication method 'BearerAuth'
+            $handler->setBearerAuth($securityBearerAuth);
+
+            // Make the call to the business logic
+            $responseCode = 200;
+            $responseHeaders = [];
+
+            $result = $handler->getUserProfile($responseCode, $responseHeaders);
+
+            $message = match($responseCode) {
+                200 => 'Benutzerprofil erfolgreich abgerufen',
+                401 => 'Nicht authentifiziert',
+                0 => 'Fachlicher oder technischer Fehler',
+                default => 'Fachlicher oder technischer Fehler',
+            };
+
+            return new Response(
+                $result !== null ?$this->serialize($result, $responseFormat):'',
+                $responseCode,
+                array_merge(
+                    $responseHeaders,
+                    [
+                        'Content-Type' => $responseFormat,
+                        'X-OpenAPI-Message' => $message
+                    ]
+                )
+            );
+        } catch (\Throwable $fallthrough) {
+            return $this->createErrorResponse(new HttpException(500, 'An unsuspected error occurred.', $fallthrough));
+        }
+    }
+
+    /**
+     * Operation updateKlasse
+     *
+     * Klasse des Benutzers aktualisieren
+     *
+     * @param Request $request The Symfony request to handle.
+     * @return Response The Symfony response.
+     */
+    public function updateKlasseAction(Request $request)
+    {
+        // Make sure that the client is providing something that we can consume
+        $consumes = ['application/json'];
+        if (!static::isContentTypeAllowed($request, $consumes)) {
+            // We can't consume the content that the client is sending us
+            return new Response('', 415);
+        }
+
+        // Figure out what data format to return to the client
+        $produces = ['application/json', 'application/problem+json'];
+        // Figure out what the client accepts
+        $clientAccepts = $request->headers->has('Accept')?$request->headers->get('Accept'):'*/*';
+        $responseFormat = $this->getOutputFormat($clientAccepts, $produces);
+        if ($responseFormat === null) {
+            return new Response('', 406);
+        }
+
+        // Handle authentication
+        // Authentication 'BearerAuth' required
+        // HTTP bearer authentication required
+        $securityBearerAuth = $request->headers->get('authorization');
+
+        // Read out all input parameter values into variables
+        $updateKlasseRequest = $request->getContent();
+
+        // Use the default value if no value was provided
+
+        // Deserialize the input values that needs it
+        try {
+            $inputFormat = $request->getMimeType($request->getContentTypeFormat());
+            $updateKlasseRequest = $this->deserialize($updateKlasseRequest, 'App\OpenApi\Model\UpdateKlasseRequest', $inputFormat);
+        } catch (SerializerRuntimeException $exception) {
+            return $this->createBadRequestResponse($exception->getMessage());
+        }
+
+        // Validate the input values
+        $asserts = [];
+        $asserts[] = new Assert\NotNull();
+        $asserts[] = new Assert\Type('App\OpenApi\Model\UpdateKlasseRequest');
+        $asserts[] = new Assert\Valid();
+        $response = $this->validate($updateKlasseRequest, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+
+
+        try {
+            $handler = $this->getApiHandler();
+
+            // Set authentication method 'BearerAuth'
+            $handler->setBearerAuth($securityBearerAuth);
+
+            // Make the call to the business logic
+            $responseCode = 200;
+            $responseHeaders = [];
+
+            $result = $handler->updateKlasse($updateKlasseRequest, $responseCode, $responseHeaders);
+
+            $message = match($responseCode) {
+                200 => 'Klasse erfolgreich aktualisiert',
+                400 => 'Ungültige Anfrage (z.B. fehlende klassen_id)',
+                401 => 'Nicht authentifiziert',
+                404 => 'Klasse nicht gefunden',
+                0 => 'Fachlicher oder technischer Fehler',
+                default => 'Fachlicher oder technischer Fehler',
+            };
+
+            return new Response(
+                $result !== null ?$this->serialize($result, $responseFormat):'',
+                $responseCode,
+                array_merge(
+                    $responseHeaders,
+                    [
+                        'Content-Type' => $responseFormat,
+                        'X-OpenAPI-Message' => $message
+                    ]
+                )
+            );
+        } catch (\Throwable $fallthrough) {
+            return $this->createErrorResponse(new HttpException(500, 'An unsuspected error occurred.', $fallthrough));
+        }
+    }
+
+    /**
+     * Returns the handler for this API controller.
+     * @return UserProfileApiInterface
+     */
+    public function getApiHandler()
+    {
+        return $this->apiServer->getApiHandler('userProfile');
+    }
+}
