# timetable/src/OpenApi/Model/UpdateKlasse200Response.php
@@ -1,0 +1,129 @@
+<?php
+/**
+ * UpdateKlasse200Response
+ *
+ * PHP version 8.1.1
+ *
+ * @category Class
+ * @package  App\OpenApi\Model
+ * @author   OpenAPI Generator team
+ * @link     https://github.com/openapitools/openapi-generator
+ */
+
+/**
+ * Bib-App Calendar API
+ *
+ * Symfony-konforme REST API für Stundenplan und Terminverwaltung
+ *
+ * The version of the OpenAPI document: 2.0.0
+ * 
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ *
+ */
+
+/**
+ * NOTE: This class is auto generated by the openapi generator program.
+ * https://github.com/openapitools/openapi-generator
+ * Do not edit the class manually.
+ */
+
+namespace App\OpenApi\Model;
+
+use Symfony\Component\Validator\Constraints as Assert;
+use JMS\Serializer\Annotation\Type;
+use JMS\Serializer\Annotation\Accessor;
+use JMS\Serializer\Annotation\SerializedName;
+
+/**
+ * Class representing the UpdateKlasse200Response model.
+ *
+ * @package App\OpenApi\Model
+ * @author  OpenAPI Generator team
+ */
+
+class UpdateKlasse200Response 
+{
+        /**
+     * @var string|null
+     * @SerializedName("message")
+     * @Type("string")
+     */
+    #[Assert\Type("string")]
+    protected ?string $message = null;
+
+    /**
+     * @var int|null
+     * @SerializedName("klasse_id")
+     * @Type("int")
+     */
+    #[Assert\Type("int")]
+    protected ?int $klasseId = null;
+
+    /**
+     * Constructor
+     * @param array|null $data Associated array of property values initializing the model
+     */
+    public function __construct(?array $data = null)
+    {
+        if (is_array($data)) {
+            $this->message = array_key_exists('message', $data) ? $data['message'] : $this->message;
+            $this->klasseId = array_key_exists('klasseId', $data) ? $data['klasseId'] : $this->klasseId;
+        }
+    }
+
+    /**
+     * Gets message.
+     *
+     * @return string|null
+     */
+    public function getMessage(): ?string
+    {
+        return $this->message;
+    }
+
+    /**
+     * Sets message.
+     *
+     * @param string|null $message
+     *
+     * @return $this
+     */
+    public function setMessage(?string $message = null): self
+    {
+        $this->message = $message;
+
+        return $this;
+    }
+
+
+
+
+    /**
+     * Gets klasseId.
+     *
+     * @return int|null
+     */
+    public function getKlasseId(): ?int
+    {
+        return $this->klasseId;
+    }
+
+    /**
+     * Sets klasseId.
+     *
+     * @param int|null $klasseId
+     *
+     * @return $this
+     */
+    public function setKlasseId(?int $klasseId = null): self
+    {
+        $this->klasseId = $klasseId;
+
+        return $this;
+    }
+
+
+
+}
+
+
