# timetable/src/OpenApi/Model/UpdateKlasseRequest.php
@@ -1,0 +1,96 @@
+<?php
+/**
+ * UpdateKlasseRequest
+ *
+ * PHP version 8.1.1
+ *
+ * @category Class
+ * @package  App\OpenApi\Model
+ * @author   OpenAPI Generator team
+ * @link     https://github.com/openapitools/openapi-generator
+ */
+
+/**
+ * Bib-App Calendar API
+ *
+ * Symfony-konforme REST API für Stundenplan und Terminverwaltung
+ *
+ * The version of the OpenAPI document: 2.0.0
+ * 
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ *
+ */
+
+/**
+ * NOTE: This class is auto generated by the openapi generator program.
+ * https://github.com/openapitools/openapi-generator
+ * Do not edit the class manually.
+ */
+
+namespace App\OpenApi\Model;
+
+use Symfony\Component\Validator\Constraints as Assert;
+use JMS\Serializer\Annotation\Type;
+use JMS\Serializer\Annotation\Accessor;
+use JMS\Serializer\Annotation\SerializedName;
+
+/**
+ * Class representing the UpdateKlasseRequest model.
+ *
+ * @package App\OpenApi\Model
+ * @author  OpenAPI Generator team
+ */
+
+class UpdateKlasseRequest 
+{
+        /**
+     * Die ID der Klasse, die dem Benutzer zugewiesen werden soll.
+     *
+     * @var int|null
+     * @SerializedName("klassen_id")
+     * @Type("int")
+     */
+    #[Assert\NotNull]
+    #[Assert\Type("int")]
+    protected ?int $klassenId = null;
+
+    /**
+     * Constructor
+     * @param array|null $data Associated array of property values initializing the model
+     */
+    public function __construct(?array $data = null)
+    {
+        if (is_array($data)) {
+            $this->klassenId = array_key_exists('klassenId', $data) ? $data['klassenId'] : $this->klassenId;
+        }
+    }
+
+    /**
+     * Gets klassenId.
+     *
+     * @return int|null
+     */
+    public function getKlassenId(): ?int
+    {
+        return $this->klassenId;
+    }
+
+    /**
+     * Sets klassenId.
+     *
+     * @param int|null $klassenId  Die ID der Klasse, die dem Benutzer zugewiesen werden soll.
+     *
+     * @return $this
+     */
+    public function setKlassenId(?int $klassenId): self
+    {
+        $this->klassenId = $klassenId;
+
+        return $this;
+    }
+
+
+
+}
+
+
